--- a/Data/CSS/main.css
+++ b/Data/CSS/main.css
@@ -1330,6 +1330,10 @@ html:not([mobile]) .projectMedia:hover .projectTags {
   pointer-events: none;
 }
 
+html[mobile] .projectVideoButton {
+  bottom: -5px;
+}
+
 .projectVideoButton[hidden] {
   display: none;
 }
@@ -1354,10 +1358,6 @@ html:not([mobile]) .projectMedia:hover .projectTags {
 
 .projectMedia[video] > .projectVideoButton > span {
   transform: translateY(40px);
-}
-
-html[mobile] .projectMedia[video] > .projectVideoButton > span {
-  transform: translateY(55px);
 }
 
 .projectVideoButton > span > img {
