--- a/Data/CSS/main.css
+++ b/Data/CSS/main.css
@@ -576,10 +576,15 @@ html:not([mobile]) .navMenuButton:not([always]) {
   z-index: -1;
 }
 
-#achMenu > span:nth-child(2) {
+#achMenuTitle {
+  text-transform: uppercase;
   line-height: 80px; 
   font-size: 22px; 
   font-family: phonk;
+}
+
+html[mobile] #achMenuTitle {
+  font-size: 20px;
 }
 
 #achMenu > div:nth-child(4) {
@@ -588,15 +593,6 @@ html:not([mobile]) .navMenuButton:not([always]) {
   flex-direction: column; 
   gap: 20px;
   margin-bottom: 20px;
-}
-
-/* Menu title */
-#achMenuTit {
-  font-size: 22px;
-}
-
-html[mobile] #achMenuTit {
-  font-size: 20px;
 }
 
 /* Menu close button */
@@ -1202,21 +1198,22 @@ html[mobile] .projectsTop {
 
 /* Projects filter & list */
 #projectsFilterBox {
-  max-height: 100px;
-  word-wrap: normal;
   display: flex; 
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 10px 20px;
   margin: 20px auto -20px auto;
-  opacity: 1;
-  transition: opacity .2s, max-height .2s;
 }
 
-#projectsFilterBox[hide] {
-  opacity: 0;
-  max-height: 0;
+#projectsFilterBox > span {
+  word-wrap: normal;
+  display: flex; 
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 #projectsList {
@@ -1224,6 +1221,109 @@ html[mobile] .projectsTop {
   flex-direction: column;
   margin-top: 50px; 
   gap: calc(5 * var(--pageGap));
+}
+
+/* Filter menu */
+#filterMenuExit {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 60;
+}
+
+#filterMenu {
+  width: 400px; 
+  max-width: calc(100% - 20px);
+  max-height: calc(100% - 20px);
+  position: relative;
+
+  display: flex; 
+  flex-direction: column; 
+  align-items: center;
+
+  /*backdrop-filter: blur(5px);
+  box-sizing: border-box; 
+  border: solid 2px var(--accent); */
+  border-radius: 25px;
+  background-color: var(--button);
+  box-shadow: var(--shadowBig); 
+
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity .2s;
+}
+
+#filterMenu > div:nth-child(1) {
+  height: 100%; 
+  width: 100%; 
+  top: 0; 
+  left: 0; 
+  background: var(--bg); 
+  opacity: .5; 
+  position: absolute; 
+  border-radius: 25px; 
+  z-index: -1;
+}
+
+#filterMenuTitle {
+  text-transform: uppercase;
+  line-height: 80px; 
+  font-size: 22px; 
+  font-family: phonk;
+}
+
+html[mobile] #filterMenuTitle {
+  font-size: 20px;
+}
+
+#filterMenuTags {
+  width: 100%; 
+  padding: 0 20px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+#filterMenuTags > .projectTag {
+  background-color: var(--bg);
+}
+
+/* Filter menu close button */
+.filterMenuClose {
+  height: 40px;
+  width: 40px;
+
+  position: absolute; 
+  top: 20px; 
+  right: 20px; 
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  box-sizing: border-box;
+  border: solid 2px var(--accent);
+  border-radius: 40px;
+
+  cursor: pointer;
+  transition: background .1s;
+}
+
+.filterMenuClose img {
+  height: 15px;
+  width: 15px;
+  filter: var(--textFilter);
+}
+
+.filterMenuClose:hover {
+  background: var(--accentT);
 }
 
 /* Projects */
@@ -1278,8 +1378,8 @@ html[mobile] .projectMedia[video] {
   margin-bottom: 40px;
 }
 
-/* Projects -> Media -> Tags */
-.projectTags {
+/* Projects -> Media -> Scope */
+.projectScope {
   padding: 8px 14px;
 
   position: absolute; 
@@ -1297,23 +1397,23 @@ html[mobile] .projectMedia[video] {
   transition: opacity 0.2s;
 }
 
-.projectTags[hidden] {
+.projectScope[hidden] {
   display: none;
 }
 
-.project[reverse] .projectTags {
+.project[reverse] .projectScope {
   left: auto;  
   right: -12px;  
 
   transform: rotate(10deg);
 }
 
-html:not([mobile]) .projectMedia:hover .projectTags {
+html:not([mobile]) .projectMedia:hover .projectScope {
   opacity: 0;
   transition-delay: var(--projectHoverDelay);
 }
 
-.projectMedia[video] .projectTags {
+.projectMedia[video] .projectScope {
   opacity: 0;
   transition-delay: 0s;
 }
@@ -1475,8 +1575,8 @@ html:not([mobile]) .projectMedia[video] + .projectInfo {
   transition-delay: 0s;
 }
 
-/* Projects -> Info -> Skills */
-.projectSkills {
+/* Projects -> Info -> Tags */
+.projectTags {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -1484,11 +1584,11 @@ html:not([mobile]) .projectMedia[video] + .projectInfo {
   gap: 10px;
 }
 
-.project[reverse] > .projectSkills {
+.project[reverse] .projectTags {
   justify-content: start;
 }
 
-html[mobile] .projectSkills {
+html[mobile] .projectTags {
   justify-content: center;
   width: 100%;
 }
@@ -1526,8 +1626,8 @@ html[mobile] .projectSkills {
   pointer-events: auto;
 }
 
-/* Project skills */
-.projectSkill {
+/* Project tags */
+.projectTag {
   width: max-content;
   height: fit-content;
   padding: 8px 12px;
@@ -1548,7 +1648,7 @@ html[mobile] .projectSkills {
   transition: background-color .1s, border .1s;
 }
 
-.projectSkill:hover {
+.projectTag:hover {
   background-color: color-mix(in srgb, var(--button) 80%, var(--accent));
   border: solid 2px var(--accent);
 }
