--- a/Data/CSS/main.css
+++ b/Data/CSS/main.css
@@ -10,27 +10,32 @@ html {
   width: 100%;
   padding: 0;
   margin: 0;
+
   font-family: poppins;
   font-size: 15px;
   user-select: none;
+
   scroll-behavior: smooth;
   -webkit-tap-highlight-color: transparent;
 
   /*Colors*/
   --bg: #0A192F;
-  --bgT: #0a192f9d;
   --button: #0c203d;
-  --text: #f5f5f5;
-  --textFilter: brightness(0) invert(1);
-  --text2: #495670;
-  --text2Filter: brightness(0) invert(30%) sepia(20%) saturate(656%) hue-rotate(182deg) brightness(100%) contrast(91%);
-  --link: #f32853;
-  --accent: #DC2249;
-  --accentT: #dc224a31;
+  --accent: #f32853;
   --accentFilter: brightness(0) invert(29%) sepia(74%) saturate(2123%) hue-rotate(327deg) brightness(83%) contrast(111%);
   --shadowSmall: 1px 1px 3px var(--bg), 1px -1px 3px var(--bg), -1px -1px 3px var(--bg), -1px 1px 3px var(--bg);
-  --shadowBig: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px;
+  --shadowBig: rgba(0, 0, 0, 0.3) 0px 10px 36px 0px;
 
+  /*Text*/
+  --text: #f5f5f5;
+  --textFilter: brightness(0) invert(1);
+  --textSoft: #a1abbe;
+  --textSoftFilter: brightness(0) saturate(100%) invert(75%) sepia(5%) saturate(969%) hue-rotate(181deg) brightness(91%) contrast(88%);
+  --textAlt: #495670;
+  --textAltFilter: brightness(0) invert(30%) sepia(20%) saturate(656%) hue-rotate(182deg) brightness(100%) contrast(91%);
+  --link: var(--accent);
+  --linkFilter: var(--accentFilter);
+  
   /*Waves*/
   --waveBot: 0;
 
@@ -51,12 +56,11 @@ html {
 
 html[light] {
   --bg: #ffffff;
-  --bgT: #ffffff69;
   --button: #e4e9f2;
   --text: #000000;
   --textFilter: brightness(0);
-  --text2: #6f7b96;
-  --text2Filter: brightness(0) invert(53%) sepia(14%) saturate(689%) hue-rotate(183deg) brightness(88%) contrast(86%);
+  --textAlt: #6f7b96;
+  --textAltFilter: brightness(0) invert(53%) sepia(14%) saturate(689%) hue-rotate(183deg) brightness(88%) contrast(86%);
 }
 
 html[mobile] {
@@ -100,12 +104,19 @@ a:not([class]) {
 
 /* Scrollbar */
 ::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
+  width: 12px;
+  height: 12px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--text2);
+  background: var(--textAlt);
+  border-radius: 7px;
+  border: solid 2px transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--textSoft);
   border-radius: 7px;
   border: solid 2px transparent;
   background-clip: content-box;
@@ -182,14 +193,14 @@ a:not([class]) {
 
   box-sizing: border-box;
   border: solid 2px var(--accent);
-  border-radius: 10px;
+  border-radius: 8px;
 
   cursor: pointer;
   transition: background .2s;
 }
 
 .pageButton:hover {
-  background: var(--accentT);
+  background: color-mix(in srgb, var(--accent) 30%, transparent);
 }
 
 /* Appear animation */
@@ -225,6 +236,101 @@ a:not([class]) {
 
 
 
+ /*$      /$$                                        
+| $$$    /$$$                                        
+| $$$$  /$$$$  /$$$$$$  /$$$$$$$  /$$   /$$  /$$$$$$$
+| $$ $$/$$ $$ /$$__  $$| $$__  $$| $$  | $$ /$$_____/
+| $$  $$$| $$| $$$$$$$$| $$  \ $$| $$  | $$|  $$$$$$ 
+| $$\  $ | $$| $$_____/| $$  | $$| $$  | $$ \____  $$
+| $$ \/  | $$|  $$$$$$$| $$  | $$|  $$$$$$/ /$$$$$$$/
+|__/     |__/ \_______/|__/  |__/ \______/ |______*/ 
+
+/* Menu backdrop (click to close) */
+dialog::backdrop {
+  background-color: transparent;
+}
+
+/* Menu container */
+dialog {
+  width: 400px; 
+  height: max-content; 
+  max-width: calc(100% - 20px);
+  max-height: calc(100% - 20px);
+  padding: 0;
+  margin: auto;
+
+  position: fixed;
+
+  display: flex; 
+  flex-direction: column; 
+  align-items: center;
+
+  border-radius: 25px;
+  background-color: var(--button);
+  box-shadow: var(--shadowBig); 
+  border: 0px solid transparent;
+  outline: transparent;
+
+  color: var(--text);
+
+  opacity: 0;
+  user-select: none;
+  pointer-events: none;
+  transition: opacity .2s;
+}
+
+dialog[open] {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+/* Menu title */
+.menuTitle {
+  text-transform: uppercase;
+  line-height: 80px; 
+  font-size: 22px; 
+  font-family: phonk;
+}
+
+html[mobile] .menuTitle {
+  font-size: 20px;
+}
+
+/* Menu close button */
+.menuClose {
+  height: 40px;
+  width: 40px;
+
+  position: absolute; 
+  top: 20px; 
+  right: 20px; 
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  box-sizing: border-box;
+  border: solid 2px transparent;
+  border-radius: 40px;
+
+  cursor: pointer;
+  transition: background-color .2s, border .2s;
+}
+
+.menuClose img {
+  height: 14px;
+  width: 14px;
+  filter: var(--textFilter);
+}
+
+.menuClose:hover {
+  background-color: color-mix(in srgb, var(--accent) 30%, transparent);
+  border: solid 2px var(--accent);
+}
+
+
+
+
   /*$$$$$  /$$    /$$ /$$$$$$$$ /$$$$$$$  /$$        /$$$$$$  /$$     /$$
  /$$__  $$| $$   | $$| $$_____/| $$__  $$| $$       /$$__  $$|  $$   /$$/
 | $$  \ $$| $$   | $$| $$      | $$  \ $$| $$      | $$  \ $$ \  $$ /$$/ 
@@ -243,7 +349,7 @@ a:not([class]) {
   position: fixed; 
   left: 40px;
   bottom: 0;
-  color: var(--text2); 
+  color: var(--textAlt); 
   display: flex; 
   gap: 30px; 
   flex-direction: column-reverse; 
@@ -257,7 +363,7 @@ html[mobile] .socials {
 .socialsLine {
   height: 10vh; 
   width: 1px; 
-  background: var(--text2);
+  background: var(--textSoft);
 }
 
 .socialsButton {
@@ -266,17 +372,16 @@ html[mobile] .socials {
   cursor: pointer;
 }
 
-.socialsButton > img{
+.socialsButton > img {
   width: 20px; 
   height: 20px; 
-  filter: var(--text2Filter);
-  transition: filter .4s, filter .4s, transform .2s;
+  filter: var(--textSoftFilter);
+  transition: filter .2s, -webkit-filter .2s, transform .2s;
 }
 
 .socialsButton:hover > img {
   filter: var(--accentFilter);
-  transform: translateY(-3px);
-  transition: filter .2s, -webkit-filter .2s, transform .2s;
+  transform: translateY(-2px);
 }
 
 
@@ -301,13 +406,14 @@ html[mobile] .socials {
   position: fixed;
   top: 0;
   left: 0;
+
   display: flex;
   justify-content: end;
   align-items: center;
-  gap: 25px;
+  gap: 35px;
 
   box-sizing: border-box;
-  background: var(--bgT); 
+  background: color-mix(in srgb, var(--bg) 80%, transparent);
   backdrop-filter: blur(5px);
 
   box-shadow: 0 2px 15px var(--bg);
@@ -326,7 +432,8 @@ html[mobile] .nav {
 .navButton {
   display: flex;
   font-family: roboto;
-  font-size: .93rem;
+  font-size: .9em;
+  color: var(--accent);
   cursor: pointer;
 }
 
@@ -334,42 +441,25 @@ html[mobile] .navButton {
   display: none;
 }
 
-.navButton span:nth-of-type(1) {
-  color: var(--accent);
-}
-
 .navButton span:nth-of-type(2) {
-  transition: color .2s;
+  transition: color .1s;
 }
 
-.navButton:hover span:nth-of-type(2) {
-  color: var(--accent);
+.navButton:not(:hover) span:nth-of-type(2) {
+  color: var(--text);
 }
 
 /* Navbar space (to fit the menu button when closed) */
 #navSpace {
-  width: 40px; 
-  transition: margin-left .3s;
+  width: 90px; 
+  transition: margin-left .1s;
 }
 
 #navSpace[open] {
-  margin-left: -60px;
+  margin-left: 100px;
 }
 
-
-
-
-
- /*$      /$$ /$$$$$$$$ /$$   /$$ /$$   /$$
-| $$$    /$$$| $$_____/| $$$ | $$| $$  | $$
-| $$$$  /$$$$| $$      | $$$$| $$| $$  | $$
-| $$ $$/$$ $$| $$$$$   | $$ $$ $$| $$  | $$
-| $$  $$$| $$| $$__/   | $$  $$$$| $$  | $$
-| $$\  $ | $$| $$      | $$\  $$$| $$  | $$
-| $$ \/  | $$| $$$$$$$$| $$ \  $$|  $$$$$$/
-|__/     |__/|________/|__/  \__/ \_____*/ 
-
-/* Menu background (click to close) */
+/* Navbar menu background (click to close) */
 #navMenuExit {
   height: 100%;
   width: 100%; 
@@ -382,11 +472,11 @@ html[mobile] .navButton {
   z-index: 51;
 }
 
-/* Menu container */
+/* Navbar menu container */
 #navMenu {
   height: fit-content;
   max-height: 40px;
-  max-width: 40px;
+  max-width: 90px;
   margin-top: 15px;
   margin-right: min(5vw, 45px);
 
@@ -396,69 +486,103 @@ html[mobile] .navButton {
   position: relative;
 
   box-sizing: border-box;
-  background: var(--bgT); 
-  backdrop-filter: blur(5px);
+  border: solid 1px var(--accent);
+  border-radius: 20px;
 
-  border: solid 2px var(--accent);
-  border-radius: 10px;
+  background: color-mix(in srgb, var(--bg) 80%, transparent);
+  backdrop-filter: blur(5px);
 
   cursor: pointer;
   overflow: hidden;
   pointer-events: all;
-  transition: background .1s, max-width .3s, max-height .3s, padding .3s, margin-top .15s;
-  transition-delay: margin-top 0;
+  transition: max-width .2s, max-height .2s, padding .2s, margin-top .4s, border-radius .2s;
 }
 
 #navMenu[menu] {
   max-height: var(--menuHeight);
   max-width: 200px;
   min-width: 180px;
+  
   backdrop-filter: blur(5px);
-  transition: background .1s, max-width .5s, max-height .5s, padding .5s, margin-top .15s;
-  transition-delay: margin-top .5s;
-}
 
-html:not([mobile]) #navMenu[menu] {
-  margin-top: 70px;
-}
+  border-radius: 8px;
 
-#navMenu:not([menu]):hover {
-  background: var(--accentT);
+  transition: max-width .5s, max-height .5s, padding .5s, margin-top .2s, border-radius .2s;
 }
 
 #navMenu[menu]:hover {
   cursor: auto;
 }
 
-#navMenu > img {
-  height: 20px;
-  width: 20px;
-  margin: 8px;
-  filter: var(--textFilter);
-  transition: height .3s, opacity .3s, margin .3s;
-}
-
-#navMenu[menu] > img {
-  height: 0;
-  opacity: 0;
-  margin: 0 8px;
-}
-
-#navMenu > div {
+/* Navbar menu open button */
+.navMenuOpen {
+  position: absolute;
+  height: 100%;
   width: 100%;
-  padding: 10px 0;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+
+  font-family: roboto;
+  font-size: .9em;
+
+  transition: opacity .4s;
+}
+
+#navMenu[menu] > .navMenuOpen {
+  height: 0;
+  width: 0;
+  margin: 0;
+  opacity: 0;
+  transition: none;
+}
+
+.navMenuOpen > img {
+  height: 14px;
+  width: 14px;
+  filter: var(--textFilter);
+}
+
+#navMenu:hover > .navMenuOpen > img {
+  animation: navMenuOpenJump 0.2s cubic-bezier(0.64, 0.57, 0.67, 1.53);
+}
+
+@keyframes navMenuOpenJump {
+  0% { 
+    transform: translateY(0); 
+  }
+  50% { 
+    transform: translateY(-3px);
+  }
+  80% { 
+    transform: translateY(2px); 
+  }
+  100% { 
+    transform: translateY(0); 
+  }
+}
+
+/* Navbar menu items */
+#navMenu > div:nth-of-type(2) {
+  width: 100%;
+  padding: 8px 0;
   position: relative;
   pointer-events: none;
   opacity: 0;
   transition: opacity .1s;
 }  
 
-#navMenu[menu] > div {
+#navMenu[menu] > div:nth-of-type(2) {
   pointer-events: all;
   opacity: 1;
 }
 
-/* Menu background */
+/* Navbar menu background */
 .navMenuBG {
   height: 100%; 
   width: 100%; 
@@ -475,7 +599,7 @@ html:not([mobile]) #navMenu[menu] {
   z-index: -1;
 }
 
-/* Menu buttons */
+/* Navbar menu buttons */
 .navMenuButton {
   min-width: 100%;
   display: flex;
@@ -493,20 +617,20 @@ html:not([mobile]) .navMenuButton:not([always]) {
 }
 
 .navMenuButton:hover, .navMenuButton:hover {
-  background: var(--accentT);
+  background: color-mix(in srgb, var(--accent) 30%, transparent);
 }
 
 .navMenuButton img {
-  height: 20px; 
-  width: 20px;
-  margin: 10px 10px 10px 0;
+  height: 18px; 
+  width: 18px;
+  margin: 10px 12px 10px 0;
   filter: var(--textFilter);
 }
 
-/* Menu action dot*/
-.navMenuDot {
-  height: 10px; 
-  width: 10px; 
+/* Navbar menu action dots*/
+.actionDot {
+  height: 8px; 
+  width: 8px; 
 
   position: absolute; 
   top: 5px;
@@ -516,6 +640,19 @@ html:not([mobile]) .navMenuButton:not([always]) {
 
   border-radius: 5px; 
   background-color: var(--accent); 
+}
+
+.actionDot[active] {
+  animation-name: actionDotAnimation;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes actionDotAnimation {
+  0% { opacity: 1; }
+  50% { opacity: 1; }
+  51% { opacity: 0; }
+  100% { opacity: 0; }
 }
 
 
@@ -531,100 +668,13 @@ html:not([mobile]) .navMenuButton:not([always]) {
 | $$  | $$|  $$$$$$/| $$  | $$ /$$$$$$| $$$$$$$$   \  $/   | $$$$$$$$| $$ \/  | $$| $$$$$$$$| $$ \  $$   | $$   
 |__/  |__/ \______/ |__/  |__/|______/|________/    \_/    |________/|__/     |__/|________/|__/  \__/   |_*/ 
 
-/* Menu background (click to close) */
-#achMenuExit {
-  height: 100%;
-  width: 100%;
-  position: fixed;
-  display: none;
-  align-items: center;
-  justify-content: center;
-  z-index: 60;
-}
-
-/* Menu container */
-#achMenu {
-  width: 400px; 
-  max-width: calc(100% - 20px);
-  max-height: calc(100% - 20px);
-  position: relative;
-
-  display: flex; 
-  flex-direction: column; 
-  align-items: center;
-
-  /*backdrop-filter: blur(5px);
-  box-sizing: border-box; 
-  border: solid 2px var(--accent); */
-  border-radius: 25px;
-  background-color: var(--button);
-  box-shadow: var(--shadowBig); 
-
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity .2s;
-}
-
-#achMenu > div:nth-child(1) {
-  height: 100%; 
-  width: 100%; 
-  top: 0; 
-  left: 0; 
-  background: var(--bg); 
-  opacity: .5; 
-  position: absolute; 
-  border-radius: 25px; 
-  z-index: -1;
-}
-
-#achMenuTitle {
-  text-transform: uppercase;
-  line-height: 80px; 
-  font-size: 22px; 
-  font-family: phonk;
-}
-
-html[mobile] #achMenuTitle {
-  font-size: 20px;
-}
-
-#achMenu > div:nth-child(4) {
+/* Achievements list */
+.achMenuList {
   width: 100%; 
   display: flex; 
   flex-direction: column; 
   gap: 20px;
   margin-bottom: 20px;
-}
-
-/* Menu close button */
-.achMenuClose {
-  height: 40px;
-  width: 40px;
-
-  position: absolute; 
-  top: 20px; 
-  right: 20px; 
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  box-sizing: border-box;
-  border: solid 2px var(--accent);
-  border-radius: 40px;
-
-  cursor: pointer;
-  transition: background .1s;
-}
-
-.achMenuClose img {
-  height: 15px;
-  width: 15px;
-  filter: var(--textFilter);
-}
-
-.achMenuClose:hover {
-  background: var(--accentT);
 }
 
 /* Achievements */
@@ -720,7 +770,7 @@ html[mobile] #achMenuTitle {
   position: fixed; 
   right: 45px;
   display: flex;
-  gap: 20px; 
+  gap: 10px; 
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -732,17 +782,34 @@ html[mobile] .balls {
 }
 
 .ball {
-  height: 10px;
-  width: 10px;
-  background: var(--text2);
-  border-radius: 10px;
+  --ballBox: 20px;
+  --ballSize: 12px;
+  height: var(--ballBox);
+  width: var(--ballBox);
   cursor: pointer;
   pointer-events: auto;
-  transition: background .3s;
+  position: relative;
 }
 
-.ball[checked] {
-  background: var(--accent);
+.ball::after {
+  content: '';
+  width: var(--ballSize);
+  height: var(--ballSize);
+  position: absolute;
+  --ballMargin: calc((var(--ballBox) - var(--ballSize)) * 0.5);
+  top: var(--ballMargin);
+  left: var(--ballMargin);
+  border-radius: 100%;
+  background-color: var(--textAlt);
+  transition: width .3s, height .3s, top .3s, bottom .3s, left .3s, right .3s, background-color .3s;
+}
+
+.ball:hover::after {
+  --ballSize: 16px;
+}
+
+.ball[checked]::after {
+  background-color: var(--accent);
 }
 
 
@@ -1130,7 +1197,7 @@ html[mobile] .skillsTextBox {
   font-family: roboto; 
   font-size: 12px; 
   font-weight: 600; 
-  color: var(--text2);
+  color: var(--textAlt);
 }
 
 .skillsBar div:nth-of-type(1) {
@@ -1154,7 +1221,7 @@ html[mobile] .skillsTextBox {
   height: 5px; 
   width: 100%; 
   margin: 7px 0 4px 0;
-  background-color: var(--text2); 
+  background-color: var(--textAlt); 
   border-radius: 5px;
 }
 
@@ -1225,61 +1292,6 @@ html[mobile] .projectsTop {
 }
 
 /* Filter menu */
-#filterMenuExit {
-  height: 100%;
-  width: 100%;
-  position: fixed;
-  display: none;
-  align-items: center;
-  justify-content: center;
-  z-index: 60;
-}
-
-#filterMenu {
-  width: 400px; 
-  max-width: calc(100% - 20px);
-  max-height: calc(100% - 20px);
-  position: relative;
-
-  display: flex; 
-  flex-direction: column; 
-  align-items: center;
-
-  /*backdrop-filter: blur(5px);
-  box-sizing: border-box; 
-  border: solid 2px var(--accent); */
-  border-radius: 25px;
-  background-color: var(--button);
-  box-shadow: var(--shadowBig); 
-
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity .2s;
-}
-
-#filterMenu > div:nth-child(1) {
-  height: 100%; 
-  width: 100%; 
-  top: 0; 
-  left: 0; 
-  background: var(--bg); 
-  opacity: .5; 
-  position: absolute; 
-  border-radius: 25px; 
-  z-index: -1;
-}
-
-#filterMenuTitle {
-  text-transform: uppercase;
-  line-height: 80px; 
-  font-size: 22px; 
-  font-family: phonk;
-}
-
-html[mobile] #filterMenuTitle {
-  font-size: 20px;
-}
-
 #filterMenuTags {
   width: 100%; 
   padding: 0 20px;
@@ -1290,10 +1302,6 @@ html[mobile] #filterMenuTitle {
   justify-content: center;
   gap: 10px;
   margin-bottom: 20px;
-}
-
-#filterMenuTags > .projectTag {
-  background-color: var(--bg);
 }
 
 /* Filter menu close button */
@@ -1324,7 +1332,7 @@ html[mobile] #filterMenuTitle {
 }
 
 .filterMenuClose:hover {
-  background: var(--accentT);
+  background: color-mix(in srgb, var(--accent) 30%, transparent);
 }
 
 /* Projects */
@@ -1650,8 +1658,12 @@ html[mobile] .projectTags {
   transition: background-color .1s, border .1s;
 }
 
+dialog .projectTag {
+  background-color: var(--bg);
+}
+
 .projectTag:hover {
-  background-color: color-mix(in srgb, var(--button) 80%, var(--accent));
+  background-color: color-mix(in srgb, var(--button) 50%, var(--accent));
   border: solid 2px var(--accent);
 }
 
@@ -1679,7 +1691,7 @@ html[mobile] .projectTags {
 }
 
 .projectButton:hover {
-  background: var(--accentT);
+  background: color-mix(in srgb, var(--accent) 30%, transparent);
 }
 
 /* Projects show more */
