changes to filtering in projects & more
- fixed a bug related to the tag filter dialog
- added an option to filter projects by category
- enabled old projects to appear (now all are visible)
- added no projects text when filtered list is empty
- updated stardew pets image resolution
- some cleanup

--- a/Data/CSS/main.css
+++ b/Data/CSS/main.css
@@ -80,11 +80,13 @@ body {
   display: flex;
   flex-direction: column;
 
-  overflow: hidden;
-
   background: var(--bg);
   color: var(--text);
   fill: var(--text);
+}
+
+body[noscroll] {
+  overflow: hidden;
 }
 
 /* Block image grab */
@@ -289,7 +291,8 @@ dialog {
   opacity: 0;
   user-select: none;
   pointer-events: none;
-  transition: opacity .2s;
+  transition: opacity .2s ease;
+  z-index: 999;
 }
 
 dialog[open] {
@@ -344,14 +347,18 @@ html[mobile] .menuTitle {
 
 
 
-  /*$$$$$  /$$    /$$ /$$$$$$$$ /$$$$$$$  /$$        /$$$$$$  /$$     /$$
- /$$__  $$| $$   | $$| $$_____/| $$__  $$| $$       /$$__  $$|  $$   /$$/
-| $$  \ $$| $$   | $$| $$      | $$  \ $$| $$      | $$  \ $$ \  $$ /$$/ 
-| $$  | $$|  $$ / $$/| $$$$$   | $$$$$$$/| $$      | $$$$$$$$  \  $$$$/  
-| $$  | $$ \  $$ $$/ | $$__/   | $$__  $$| $$      | $$__  $$   \  $$/   
-| $$  | $$  \  $$$/  | $$      | $$  \ $$| $$      | $$  | $$    | $$    
-|  $$$$$$/   \  $/   | $$$$$$$$| $$  | $$| $$$$$$$$| $$  | $$    | $$    
- \______/     \_/    |________/|__/  |__/|________/|__/  |__/    |_*/    
+
+  /*$$$$$                                /$$
+ /$$__  $$                              | $$
+| $$  \ $$ /$$    /$$ /$$$$$$   /$$$$$$ | $$  /$$$$$$  /$$   /$$
+| $$  | $$|  $$  /$$//$$__  $$ /$$__  $$| $$ |____  $$| $$  | $$
+| $$  | $$ \  $$/$$/| $$$$$$$$| $$  \__/| $$  /$$$$$$$| $$  | $$
+| $$  | $$  \  $$$/ | $$_____/| $$      | $$ /$$__  $$| $$  | $$
+|  $$$$$$/   \  $/  |  $$$$$$$| $$      | $$|  $$$$$$$|  $$$$$$$
+ \______/     \_/    \_______/|__/      |__/ \_______/ \____  $$
+                                                       /$$  | $$
+                                                      |  $$$$$$/
+                                                       \_____*/
 
 .overlay {
   height: 100%; 
@@ -401,14 +408,14 @@ html[mobile] .socials {
 
 
 
- /*$   /$$  /$$$$$$  /$$    /$$ /$$$$$$$   /$$$$$$  /$$$$$$$ 
-| $$$ | $$ /$$__  $$| $$   | $$| $$__  $$ /$$__  $$| $$__  $$
-| $$$$| $$| $$  \ $$| $$   | $$| $$  \ $$| $$  \ $$| $$  \ $$
-| $$ $$ $$| $$$$$$$$|  $$ / $$/| $$$$$$$ | $$$$$$$$| $$$$$$$/
-| $$  $$$$| $$__  $$ \  $$ $$/ | $$__  $$| $$__  $$| $$__  $$
-| $$\  $$$| $$  | $$  \  $$$/  | $$  \ $$| $$  | $$| $$  \ $$
-| $$ \  $$| $$  | $$   \  $/   | $$$$$$$/| $$  | $$| $$  | $$
-|__/  \__/|__/  |__/    \_/    |_______/ |__/  |__/|__/  |_*/
+ /*$   /$$                      /$$                          
+| $$$ | $$                     | $$                          
+| $$$$| $$  /$$$$$$  /$$    /$$| $$$$$$$   /$$$$$$   /$$$$$$ 
+| $$ $$ $$ |____  $$|  $$  /$$/| $$__  $$ |____  $$ /$$__  $$
+| $$  $$$$  /$$$$$$$ \  $$/$$/ | $$  \ $$  /$$$$$$$| $$  \__/
+| $$\  $$$ /$$__  $$  \  $$$/  | $$  | $$ /$$__  $$| $$      
+| $$ \  $$|  $$$$$$$   \  $/   | $$$$$$$/|  $$$$$$$| $$      
+|__/  \__/ \_______/    \_/    |_______/  \_______/|_*/      
 
 /* Navbar container */
 .nav {
@@ -507,7 +514,7 @@ html[mobile] .navButton {
 
   cursor: pointer;
   overflow: hidden;
-  pointer-events: all;
+  pointer-events: auto;
   transition: max-width .2s, max-height .2s, padding .2s, margin-top .4s, border-radius .2s;
 }
 
@@ -591,7 +598,7 @@ html[mobile] .navButton {
 }  
 
 #navMenu[menu] > div:nth-of-type(2) {
-  pointer-events: all;
+  pointer-events: inherit;
   opacity: 1;
 }
 
@@ -672,14 +679,14 @@ html:not([mobile]) .navMenuButton:not([always]) {
 
 
 
-  /*$$$$$   /$$$$$$  /$$   /$$ /$$$$$$ /$$$$$$$$ /$$    /$$ /$$$$$$$$ /$$      /$$ /$$$$$$$$ /$$   /$$ /$$$$$$$$
- /$$__  $$ /$$__  $$| $$  | $$|_  $$_/| $$_____/| $$   | $$| $$_____/| $$$    /$$$| $$_____/| $$$ | $$|__  $$__/
-| $$  \ $$| $$  \__/| $$  | $$  | $$  | $$      | $$   | $$| $$      | $$$$  /$$$$| $$      | $$$$| $$   | $$   
-| $$$$$$$$| $$      | $$$$$$$$  | $$  | $$$$$   |  $$ / $$/| $$$$$   | $$ $$/$$ $$| $$$$$   | $$ $$ $$   | $$   
-| $$__  $$| $$      | $$__  $$  | $$  | $$__/    \  $$ $$/ | $$__/   | $$  $$$| $$| $$__/   | $$  $$$$   | $$   
-| $$  | $$| $$    $$| $$  | $$  | $$  | $$        \  $$$/  | $$      | $$\  $ | $$| $$      | $$\  $$$   | $$   
-| $$  | $$|  $$$$$$/| $$  | $$ /$$$$$$| $$$$$$$$   \  $/   | $$$$$$$$| $$ \/  | $$| $$$$$$$$| $$ \  $$   | $$   
-|__/  |__/ \______/ |__/  |__/|______/|________/    \_/    |________/|__/     |__/|________/|__/  \__/   |_*/ 
+  /*$$$$$            /$$       /$$                                                                   /$$
+ /$$__  $$          | $$      |__/                                                                  | $$
+| $$  \ $$  /$$$$$$$| $$$$$$$  /$$  /$$$$$$  /$$    /$$ /$$$$$$  /$$$$$$/$$$$   /$$$$$$  /$$$$$$$  /$$$$$$   /$$$$$$$
+| $$$$$$$$ /$$_____/| $$__  $$| $$ /$$__  $$|  $$  /$$//$$__  $$| $$_  $$_  $$ /$$__  $$| $$__  $$|_  $$_/  /$$_____/
+| $$__  $$| $$      | $$  \ $$| $$| $$$$$$$$ \  $$/$$/| $$$$$$$$| $$ \ $$ \ $$| $$$$$$$$| $$  \ $$  | $$   |  $$$$$$ 
+| $$  | $$| $$      | $$  | $$| $$| $$_____/  \  $$$/ | $$_____/| $$ | $$ | $$| $$_____/| $$  | $$  | $$ /$$\____  $$
+| $$  | $$|  $$$$$$$| $$  | $$| $$|  $$$$$$$   \  $/  |  $$$$$$$| $$ | $$ | $$|  $$$$$$$| $$  | $$  |  $$$$//$$$$$$$/
+|__/  |__/ \_______/|__/  |__/|__/ \_______/    \_/    \_______/|__/ |__/ |__/ \_______/|__/  |__/   \___/ |______*/ 
 
 /* Achievements list */
 .achMenuList {
@@ -769,14 +776,14 @@ html:not([mobile]) .navMenuButton:not([always]) {
 
 
 
- /*$$$$$$   /$$$$$$  /$$       /$$        /$$$$$$ 
-| $$__  $$ /$$__  $$| $$      | $$       /$$__  $$
-| $$  \ $$| $$  \ $$| $$      | $$      | $$  \__/
-| $$$$$$$ | $$$$$$$$| $$      | $$      |  $$$$$$ 
-| $$__  $$| $$__  $$| $$      | $$       \____  $$
-| $$  \ $$| $$  | $$| $$      | $$       /$$  \ $$
-| $$$$$$$/| $$  | $$| $$$$$$$$| $$$$$$$$|  $$$$$$/
-|_______/ |__/  |__/|________/|________/ \_____*/ 
+ /*$$$$$$            /$$ /$$          
+| $$__  $$          | $$| $$          
+| $$  \ $$  /$$$$$$ | $$| $$  /$$$$$$$
+| $$$$$$$  |____  $$| $$| $$ /$$_____/
+| $$__  $$  /$$$$$$$| $$| $$|  $$$$$$ 
+| $$  \ $$ /$$__  $$| $$| $$ \____  $$
+| $$$$$$$/|  $$$$$$$| $$| $$ /$$$$$$$/
+|_______/  \_______/|__/|__/|______*/ 
 
 .balls {
   height: 100vh; 
@@ -829,14 +836,14 @@ html[mobile] .balls {
 
 
 
-  /*$$$$$  /$$   /$$  /$$$$$$   /$$$$$$  /$$   /$$ /$$$$$$$   /$$$$$$  /$$$$$$$ 
- /$$__  $$| $$$ | $$ /$$__  $$ /$$__  $$| $$  /$$/| $$__  $$ /$$__  $$| $$__  $$
-| $$  \__/| $$$$| $$| $$  \ $$| $$  \__/| $$ /$$/ | $$  \ $$| $$  \ $$| $$  \ $$
-|  $$$$$$ | $$ $$ $$| $$$$$$$$| $$      | $$$$$/  | $$$$$$$ | $$$$$$$$| $$$$$$$/
- \____  $$| $$  $$$$| $$__  $$| $$      | $$  $$  | $$__  $$| $$__  $$| $$__  $$
- /$$  \ $$| $$\  $$$| $$  | $$| $$    $$| $$\  $$ | $$  \ $$| $$  | $$| $$  \ $$
-|  $$$$$$/| $$ \  $$| $$  | $$|  $$$$$$/| $$ \  $$| $$$$$$$/| $$  | $$| $$  | $$
- \______/ |__/  \__/|__/  |__/ \______/ |__/  \__/|_______/ |__/  |__/|__/  |_*/
+  /*$$$$$                                /$$       /$$                          
+ /$$__  $$                              | $$      | $$                          
+| $$  \__/ /$$$$$$$   /$$$$$$   /$$$$$$$| $$   /$$| $$$$$$$   /$$$$$$   /$$$$$$ 
+|  $$$$$$ | $$__  $$ |____  $$ /$$_____/| $$  /$$/| $$__  $$ |____  $$ /$$__  $$
+ \____  $$| $$  \ $$  /$$$$$$$| $$      | $$$$$$/ | $$  \ $$  /$$$$$$$| $$  \__/
+ /$$  \ $$| $$  | $$ /$$__  $$| $$      | $$_  $$ | $$  | $$ /$$__  $$| $$      
+|  $$$$$$/| $$  | $$|  $$$$$$$|  $$$$$$$| $$ \  $$| $$$$$$$/|  $$$$$$$| $$      
+ \______/ |__/  |__/ \_______/ \_______/|__/  \__/|_______/  \_______/|_*/      
 
 .snackbar {
   padding: 15px; 
@@ -875,14 +882,14 @@ html[mobile] .balls {
 
 
 
- /*$      /$$  /$$$$$$  /$$    /$$ /$$$$$$$$  /$$$$$$ 
-| $$  /$ | $$ /$$__  $$| $$   | $$| $$_____/ /$$__  $$
-| $$ /$$$| $$| $$  \ $$| $$   | $$| $$      | $$  \__/
-| $$/$$ $$ $$| $$$$$$$$|  $$ / $$/| $$$$$   |  $$$$$$ 
-| $$$$_  $$$$| $$__  $$ \  $$ $$/ | $$__/    \____  $$
-| $$$/ \  $$$| $$  | $$  \  $$$/  | $$       /$$  \ $$
-| $$/   \  $$| $$  | $$   \  $/   | $$$$$$$$|  $$$$$$/
-|__/     \__/|__/  |__/    \_/    |________/ \_____*/ 
+ /*$      /$$                                        
+| $$  /$ | $$                                        
+| $$ /$$$| $$  /$$$$$$  /$$    /$$ /$$$$$$   /$$$$$$$
+| $$/$$ $$ $$ |____  $$|  $$  /$$//$$__  $$ /$$_____/
+| $$$$_  $$$$  /$$$$$$$ \  $$/$$/| $$$$$$$$|  $$$$$$ 
+| $$$/ \  $$$ /$$__  $$  \  $$$/ | $$_____/ \____  $$
+| $$/   \  $$|  $$$$$$$   \  $/  |  $$$$$$$ /$$$$$$$/
+|__/     \__/ \_______/    \_/    \_______/|______*/ 
 
 #waves {
   height: 100%; 
@@ -951,14 +958,14 @@ html[mobile] .balls {
 
 
 
- /*$   /$$  /$$$$$$  /$$      /$$ /$$$$$$$$
-| $$  | $$ /$$__  $$| $$$    /$$$| $$_____/
-| $$  | $$| $$  \ $$| $$$$  /$$$$| $$      
-| $$$$$$$$| $$  | $$| $$ $$/$$ $$| $$$$$   
-| $$__  $$| $$  | $$| $$  $$$| $$| $$__/   
-| $$  | $$| $$  | $$| $$\  $ | $$| $$      
-| $$  | $$|  $$$$$$/| $$ \/  | $$| $$$$$$$$
-|__/  |__/ \______/ |__/     |__/|_______*/
+ /*$   /$$                                  
+| $$  | $$                                  
+| $$  | $$  /$$$$$$  /$$$$$$/$$$$   /$$$$$$ 
+| $$$$$$$$ /$$__  $$| $$_  $$_  $$ /$$__  $$
+| $$__  $$| $$  \ $$| $$ \ $$ \ $$| $$$$$$$$
+| $$  | $$| $$  | $$| $$ | $$ | $$| $$_____/
+| $$  | $$|  $$$$$$/| $$ | $$ | $$|  $$$$$$$
+|__/  |__/ \______/ |__/ |__/ |__/ \______*/
 
 #home {
   justify-content: center; 
@@ -1071,14 +1078,14 @@ html[mobile] .homeDT {
 
 
 
-  /*$$$$$  /$$$$$$$   /$$$$$$  /$$   /$$ /$$$$$$$$
- /$$__  $$| $$__  $$ /$$__  $$| $$  | $$|__  $$__/
-| $$  \ $$| $$  \ $$| $$  \ $$| $$  | $$   | $$   
-| $$$$$$$$| $$$$$$$ | $$  | $$| $$  | $$   | $$   
-| $$__  $$| $$__  $$| $$  | $$| $$  | $$   | $$   
-| $$  | $$| $$  \ $$| $$  | $$| $$  | $$   | $$   
-| $$  | $$| $$$$$$$/|  $$$$$$/|  $$$$$$/   | $$   
-|__/  |__/|_______/  \______/  \______/    |_*/
+  /*$$$$$  /$$                             /$$    
+ /$$__  $$| $$                            | $$    
+| $$  \ $$| $$$$$$$   /$$$$$$  /$$   /$$ /$$$$$$  
+| $$$$$$$$| $$__  $$ /$$__  $$| $$  | $$|_  $$_/  
+| $$__  $$| $$  \ $$| $$  \ $$| $$  | $$  | $$    
+| $$  | $$| $$  | $$| $$  | $$| $$  | $$  | $$ /$$
+| $$  | $$| $$$$$$$/|  $$$$$$/|  $$$$$$/  |  $$$$/
+|__/  |__/|_______/  \______/  \______/    \___*/
 
 #about {
   flex-direction: row; 
@@ -1167,14 +1174,14 @@ html[mobile] .aboutImgBox {
 
 
 
-  /*$$$$$  /$$   /$$ /$$$$$$ /$$       /$$        /$$$$$$ 
- /$$__  $$| $$  /$$/|_  $$_/| $$      | $$       /$$__  $$
-| $$  \__/| $$ /$$/   | $$  | $$      | $$      | $$  \__/
-|  $$$$$$ | $$$$$/    | $$  | $$      | $$      |  $$$$$$ 
- \____  $$| $$  $$    | $$  | $$      | $$       \____  $$
- /$$  \ $$| $$\  $$   | $$  | $$      | $$       /$$  \ $$
-|  $$$$$$/| $$ \  $$ /$$$$$$| $$$$$$$$| $$$$$$$$|  $$$$$$/
- \______/ |__/  \__/|______/|________/|________/ \_____*/ 
+  /*$$$$$  /$$       /$$ /$$ /$$          
+ /$$__  $$| $$      |__/| $$| $$          
+| $$  \__/| $$   /$$ /$$| $$| $$  /$$$$$$$
+|  $$$$$$ | $$  /$$/| $$| $$| $$ /$$_____/
+ \____  $$| $$$$$$/ | $$| $$| $$|  $$$$$$ 
+ /$$  \ $$| $$_  $$ | $$| $$| $$ \____  $$
+|  $$$$$$/| $$ \  $$| $$| $$| $$ /$$$$$$$/
+ \______/ |__/  \__/|__/|__/|__/|______*/ 
  
 #skills {
   justify-content: center; 
@@ -1251,14 +1258,17 @@ html[mobile] .skillsTextBox {
 
 
 
- /*$$$$$$  /$$$$$$$   /$$$$$$     /$$$$$ /$$$$$$$$  /$$$$$$  /$$$$$$$$ /$$$$$$ 
-| $$__  $$| $$__  $$ /$$__  $$   |__  $$| $$_____/ /$$__  $$|__  $$__//$$__  $$
-| $$  \ $$| $$  \ $$| $$  \ $$      | $$| $$      | $$  \__/   | $$  | $$  \__/
-| $$$$$$$/| $$$$$$$/| $$  | $$      | $$| $$$$$   | $$         | $$  |  $$$$$$ 
-| $$____/ | $$__  $$| $$  | $$ /$$  | $$| $$__/   | $$         | $$   \____  $$
-| $$      | $$  \ $$| $$  | $$| $$  | $$| $$      | $$    $$   | $$   /$$  \ $$
-| $$      | $$  | $$|  $$$$$$/|  $$$$$$/| $$$$$$$$|  $$$$$$/   | $$  |  $$$$$$/
-|__/      |__/  |__/ \______/  \______/ |________/ \______/    |__/   \_____*/ 
+ /*$$$$$$                                               /$$             
+| $$__  $$                                             | $$             
+| $$  \ $$ /$$$$$$   /$$$$$$  /$$  /$$$$$$   /$$$$$$$ /$$$$$$   /$$$$$$$
+| $$$$$$$//$$__  $$ /$$__  $$|__/ /$$__  $$ /$$_____/|_  $$_/  /$$_____/
+| $$____/| $$  \__/| $$  \ $$ /$$| $$$$$$$$| $$        | $$   |  $$$$$$ 
+| $$     | $$      | $$  | $$| $$| $$_____/| $$        | $$ /$$\____  $$
+| $$     | $$      |  $$$$$$/| $$|  $$$$$$$|  $$$$$$$  |  $$$$//$$$$$$$/
+|__/     |__/       \______/ | $$ \_______/ \_______/   \___/ |_______/ 
+                        /$$  | $$
+                       |  $$$$$$/
+                        \_____*/
 
 #projects {
  /* justify-content: center; */
@@ -1304,8 +1314,8 @@ html[mobile] .projectsTop {
   gap: calc(5 * var(--pageGap));
 }
 
-/* Filter menu */
-#filterMenuTags {
+/* Categories & filters menus */
+#categoryMenuTags, #filterMenuTags {
   width: 100%; 
   padding: 0 20px;
   box-sizing: border-box;
@@ -1476,7 +1486,7 @@ html[mobile] .projectVideoButton {
   background-color: var(--button);
   /*box-shadow: var(--shadowSmall);*/
   
-  pointer-events: all;
+  pointer-events: auto;
   cursor: pointer;
 
   transition: transform .3s;
@@ -1607,6 +1617,10 @@ html:not([mobile]) .projectMedia[video] + .projectInfo {
   gap: 10px;
 }
 
+.projectTags > .projectTag {
+  pointer-events: auto;
+}
+
 html:not([mobile]) .project[reverse] .projectTags {
   justify-content: start;
 }
@@ -1684,7 +1698,7 @@ html:not([mobile]) .project[reverse] .projectInfoContent > div:nth-child(1) {
   box-sizing: border-box;
   border: solid 2px transparent;
 
-  pointer-events: auto;
+  pointer-events: inherit;
   cursor: pointer;
 
   transition: background-color .1s, border .1s;
@@ -1697,6 +1711,16 @@ dialog .projectTag {
 .projectTag:hover {
   background-color: color-mix(in srgb, var(--button) 50%, var(--accent));
   border: solid 2px var(--accent);
+}
+
+/* Projects none */
+.projectsNone {
+  width: 100%;
+  text-align: center;
+}
+
+.projectsNone > div:nth-child(1) {
+  font-size: 100px;
 }
 
 /* Projects show more */
@@ -1713,14 +1737,14 @@ dialog .projectTag {
 
 
 
- /*$$$$$$   /$$$$$$  /$$$$$$$$ /$$$$$$$$ /$$$$$$  /$$      /$$
-| $$__  $$ /$$__  $$|__  $$__/|__  $$__//$$__  $$| $$$    /$$$
-| $$  \ $$| $$  \ $$   | $$      | $$  | $$  \ $$| $$$$  /$$$$
-| $$$$$$$ | $$  | $$   | $$      | $$  | $$  | $$| $$ $$/$$ $$
-| $$__  $$| $$  | $$   | $$      | $$  | $$  | $$| $$  $$$| $$
-| $$  \ $$| $$  | $$   | $$      | $$  | $$  | $$| $$\  $ | $$
-| $$$$$$$/|  $$$$$$/   | $$      | $$  |  $$$$$$/| $$ \/  | $$
-|_______/  \______/    |__/      |__/   \______/ |__/     |_*/
+ /*$$$$$$              /$$     /$$
+| $$__  $$            | $$    | $$
+| $$  \ $$  /$$$$$$  /$$$$$$ /$$$$$$    /$$$$$$  /$$$$$$/$$$$ 
+| $$$$$$$  /$$__  $$|_  $$_/|_  $$_/   /$$__  $$| $$_  $$_  $$
+| $$__  $$| $$  \ $$  | $$    | $$    | $$  \ $$| $$ \ $$ \ $$
+| $$  \ $$| $$  | $$  | $$ /$$| $$ /$$| $$  | $$| $$ | $$ | $$
+| $$$$$$$/|  $$$$$$/  |  $$$$/|  $$$$/|  $$$$$$/| $$ | $$ | $$
+|_______/  \______/    \___/   \___/   \______/ |__/ |__/ |_*/
 
 /* Bottom container */
 .bot {
